@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2022-06-20T08:21:45Z",
-  "count" : 61,
-  "count_minmax" : [ 61, 61 ],
-  "count_decinc" : [ -0, +61 ],
-  "uniques" : 1,
-  "uniques_minmax" : [ 1, 1 ],
-  "uniques_decinc" : [ -0, +1 ]
+  "timestamp" : "2022-06-20T16:24:30Z",
+  "count" : 63,
+  "count_minmax" : [ 61, 63 ],
+  "count_decinc" : [ -0, +63 ],
+  "uniques" : 2,
+  "uniques_minmax" : [ 1, 2 ],
+  "uniques_decinc" : [ -0, +2 ]
 }
