@@ -1,17 +1,10 @@
 {
-  "timestamp" : "2022-06-20T08:21:45Z",
-  "count_outdated" : 336,
-  "uniques_outdated" : 144,
-  "count" : 426,
-  "uniques" : 150,
+  "timestamp" : "2022-06-20T16:24:30Z",
+  "count_outdated" : 337,
+  "uniques_outdated" : 145,
+  "count" : 428,
+  "uniques" : 151,
   "views" : [
-    {
-      "timestamp": "2022-06-06T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ]
-    },
     {
       "timestamp": "2022-06-10T00:00:00Z",
       "count": 1,
@@ -35,10 +28,10 @@
     },
     {
       "timestamp": "2022-06-20T00:00:00Z",
-      "count": 61,
-      "count_minmax": [ 61, 61 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ]
+      "count": 63,
+      "count_minmax": [ 61, 63 ],
+      "uniques": 2,
+      "uniques_minmax": [ 1, 2 ]
     }
   ]
 }
