@@ -1,12 +1,7 @@
 {
-  "count": 90,
+  "count": 91,
   "uniques": 5,
   "views": [
-    {
-      "timestamp": "2022-06-06T00:00:00Z",
-      "count": 1,
-      "uniques": 1
-    },
     {
       "timestamp": "2022-06-10T00:00:00Z",
       "count": 1,
@@ -24,8 +19,8 @@
     },
     {
       "timestamp": "2022-06-20T00:00:00Z",
-      "count": 61,
-      "uniques": 1
+      "count": 63,
+      "uniques": 2
     }
   ]
 }
