@@ -1,3 +1,10 @@
+2022-06-20T16:24:30Z:
+* notice: last 14d: unq all: 5 91
+* notice: prev accum: outdated-unq outdated-all / unq all: 144 336 / 150 426
+* notice: next accum: outdated-unq outdated-all / unq all: 145 337 / 151 428
+* notice: prev exec diff / last date diff / accum: unq all: +1 +2 -0 -0 / +2 +63 -0 -0 / 2 63
+* notice: removed / changed dates: [2022-06-06] / [2022-06-20]
+
 2022-06-20T08:21:45Z:
 * notice: last 14d: unq all: 5 90
 * notice: prev accum: outdated-unq outdated-all / unq all: 144 336 / 149 365
